<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search_button">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="back_button">Кнопка назад</string>
    <string name="android_developer_link">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="terms_of_use_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="my_email">elchin.gasimov971@yandex.ru</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="nothing_to_show">Ничего не нашлось</string>
    <string name="network_problems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="added_to_history">Добавлено в историю</string>
    <string name="estimate">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="_00_00">00:00</string>
    <string name="no_internet">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="library">Медиатека</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\nни одного плэйлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create_playlist">Создать</string>
    <string name="rationale_permission_message">Необходимо разрешение для просмотра галереи</string>
    <string name="playlist">Плейлист</string>
    <string name="my_playlists">my_playlists</string>
    <string name="created">создан</string>
    <string name="added">Добавлено в плейлист</string>
    <string name="already_added">Трек уже добавлен в плейлист</string>
    <string name="title_playlist_dialog">Завершить создание плейлиста?</string>
    <string name="message_playlist_dialog">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>

    <plurals name="tracks">
        <item quantity="zero">нет треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <string name="_0_tracks">0 треков</string>
    <string name="add_to_playlist">Добавить в плейлист</string>

    <string name="playlist_count_and_duration">%s \u2022 %s</string>
    <string name="playlist_delete_track_title">Хотите удалить трек?</string>
    <string name="playlist_delete_title">Хотите удалить плейлист?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>


</resources>
