<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/ys_display_medium"
            android:paddingStart="@dimen/_16dp"
            android:paddingTop="@dimen/_14dp"
            android:paddingEnd="@dimen/_62dp"
            android:text="@string/app_name"
            android:textColor="?attr/YP_White"
            android:textSize="@dimen/_26sp" />

    </FrameLayout>

    <Button
        android:id="@+id/searchBtn"
        style="@style/MainScreenButton"
        android:text="@string/search_button"
        app:icon="@drawable/ic_search" />

    <Button
        android:id="@+id/mediaLibraryBtn"
        style="@style/MainScreenButton"
        android:text="@string/media_library"
        app:icon="@drawable/ic_media_library" />

    <Button
        android:id="@+id/settingsBtn"
        style="@style/MainScreenButton"
        android:layout_marginBottom="@dimen/_28dp"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings" />

</LinearLayout>
