<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <ImageButton
            android:id="@+id/settings_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/white"
            android:padding="12dp"
            android:src="@drawable/arrow_back_icon"
            app:iconTint="@color/black"
            android:contentDescription="@string/back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:paddingTop="10dp"
            android:paddingBottom="12dp"
            android:text="@string/settings"
            android:textColor="@color/YP_black"
            android:textSize="22sp"

            />
    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="21dp"
        android:paddingStart="16dp"
        android:paddingEnd="4dp"
        android:text="@string/dark_theme"
        android:textSize="16sp">

    </androidx.appcompat.widget.SwitchCompat>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="19dp"
        android:paddingEnd="12dp"
        android:paddingBottom="18dp"
        android:text="@string/share_app"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableRightCompat="@drawable/share_icon"
        app:iconTint="@color/YP_text_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="19dp"
        android:paddingEnd="12dp"
        android:paddingBottom="18dp"
        android:text="@string/support"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableRightCompat="@drawable/support_icon"
        app:iconTint="@color/YP_text_gray"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="19dp"
        android:paddingEnd="12dp"
        android:paddingBottom="18dp"
        android:text="@string/terms_of_use"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableRightCompat="@drawable/arrow_right"
        app:iconTint="@color/YP_text_gray"

        />

</LinearLayout>
